Se eliminaron los links de las fuentes del html y se colocaron en el css con @import, se agregó el meta description y se agregó el preload.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Challenge elaborated by Nelson Pascual, in which a Stats Preview Card Component is shown.">
         <title>Frontend Mentor | Stats Preview Card Component</title>
         <link rel="shortcut icon" href="img/favicon-32x32.png" type="image/png">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="css/normalize.css">
+        <link rel="preload" href="css/app.css" as="style">
         <link rel="stylesheet" href="css/app.css">
         <link rel="stylesheet" href="css/media-queries.css">
     </head>
